@@ -20,16 +20,22 @@
 #
 # Be sure to retain the above copyright notice and conditions.
 
+import barrier_single
 import digital_simple
 import vanilla_european
 import vanilla_american
 import autocall_phoenix
 import autocall_snowball
 
-g_version = "V0.1.0-Beta Build 20210825"
+g_version = "V0.1.0-Beta Build 20211028"
 
 def Version():
     return g_version
+
+def Barrier(type):
+    type = type.lower()
+    if type == "single":
+        return barrier_single.Barrier_Single()
 
 def Digital(type):
     type = type.lower()
