@@ -1,4 +1,6 @@
 
+2021-10-27 0.1.1:
+ - 增加 Barrier Single 标准欧式单障碍期权定价功能及其示例。
+
 2021-08-25 0.1.0:
  - 构建项目基本结构。
- - 
